<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoAgend</string>
    <string name="app_name_long">AutoAgend: Automatic Student Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">New Class</string>
    <string name="hint_title">History</string>
    <string name="hint_description">Mr. Smith</string>
    <string name="enter">Enter</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="default_classname">No Class</string>
    <string name="default_description">No Teacher</string>
    <string name="default_period">No Period</string>
    <string name="assignments">Assignments</string>
    <string name="new_class_label">New Class</string>
    <string name="textview_period">Period: </string>
    <string name="hint_period">1</string>
    <string name="text_new_assignment">New Assignment</string>
    <string name="text_edit_info">Edit Info</string>
    <string name="hint_assignment_description">Chapters 4–5</string>
    <string name="hint_assignment_title">Read the great gatsby</string>
    <string name="date_assigned_text">Date Assigned:</string>
    <string name="date_due_text">Date Due:</string>
    <string name="date_hint">1/1/15</string>
    <string name="empty_class">Add a class by clicking the \"+\"</string>
    <string name="empty_assignment">No Assignments</string>
    <string name="empty_hidden_assignment">No Hidden Assignments</string>
    <string name="class_name">Class Name:</string>
    <string name="class_hint">Mathematics</string>
    <string name="click_for_pic">Click Here to View Picture</string>
    <string name="class_time_start_text">Class time start: </string>
    <string name="class_time_end_text">Class time end: </string>
    <string name="time_hint">12:00 AM</string>
    <string name="edit_class">Edit Class Info</string>
    <string name="edit_assignment">Edit Assignment Info</string>
    <string name="date_divider">-</string>
    <string name="teacher">Teacher:</string>
    <string name="assignment_title">Assignment Title:</string>
    <string name="assignment_description">Assignment Description:</string>
    <string name="hidden_assignments">Hidden Assignments</string>
    <string name="show_hidden">Hidden Assignments</string>
    <string name="add_assignment">Add New Assignment</string>
    <string name="hide_assignment">Toggle Hidden</string>
    <string name="set_completed">Toggle Completed</string>

</resources>
