<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/text_new_assignment"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/assignment_title"
            android:textColor="@color/primary_text_default_material_light" />

        <EditText
            android:id="@+id/edittext_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_assignment_title"
            android:inputType="textCapSentences" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/assignment_description"
            android:textColor="@color/primary_text_default_material_light" />

        <EditText
            android:id="@+id/edittext_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_assignment_description"
            android:inputType="textCapSentences" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_assigned_text"
            android:textColor="@color/primary_text_default_material_light" />

        <EditText
            android:id="@+id/date_assigned_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/date_hint"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_due_text"
            android:textColor="@color/primary_text_default_material_light" />

        <EditText
            android:id="@+id/date_due_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/date_hint"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/class_name"
            android:textColor="@color/primary_text_default_material_light" />

        <EditText
            android:id="@+id/class_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/class_hint"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>