<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/test"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:gravity="bottom"
        android:hint="@string/hint_title"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edittext_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_title"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:gravity="bottom"
        android:hint="@string/hint_description"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/period_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_below="@id/edittext_description"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:textSize="18sp"
            android:text="@string/textview_period" />

        <EditText
            android:id="@+id/edittext_period"
            android:layout_width="wrap_content"
            android:padding="12dp"
            android:layout_height="fill_parent"
            android:inputType="number"
            android:gravity="bottom"
            android:hint="@string/hint_period"/>
    </LinearLayout>

</RelativeLayout>